--- a/app/src/main/res/menu/example_menu.xml
+++ b/app/src/main/res/menu/example_menu.xml
@@ -4,14 +4,14 @@
 
     <item android:id="@+id/item1"
         android:icon="@drawable/ic_search_black_24dp"
-        android:title="Item 1"
+        android:title="Search"
         app:showAsAction="ifRoom"/>
 
     <item android:id="@+id/item2"
-        android:title="Item 2"
+        android:title="Popular"
         app:showAsAction="never"/>
 
     <item android:id="@+id/item3"
-        android:title="Item 3"
+        android:title="Favourite"
         app:showAsAction="never"/>
 </menu>
