--- a/app/src/main/res/menu/example_menu.xml
+++ b/app/src/main/res/menu/example_menu.xml
@@ -2,10 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/item1"
-        android:icon="@drawable/ic_search_black_24dp"
-        android:title="Search"
-        app:showAsAction="ifRoom"/>
+    <!--<item android:id="@+id/item1"-->
+        <!--android:icon="@drawable/ic_search_black_24dp"-->
+        <!--android:title="Search"-->
+        <!--app:showAsAction="ifRoom"/>-->
 
     <item android:id="@+id/item2"
         android:title="Popular"
