--- a/app/src/main/res/layout/layout_listitem.xml
+++ b/app/src/main/res/layout/layout_listitem.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="wrap_content"
-    android:padding="15dp"
-    android:id="@+id/parent_layout">
+    android:id="@+id/parent_layout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/colorGrey"
+    android:padding="15dp">
 
 
     <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/image"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:id="@+id/image"
         android:src="@mipmap/ic_launcher" />
 
     <TextView
@@ -20,8 +22,9 @@
         android:layout_marginTop="25dp"
         android:layout_toRightOf="@+id/image"
         android:text="Canada"
-        android:textColor="#000"
-        android:textSize="18sp" />
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/image_description"
@@ -31,7 +34,7 @@
         android:layout_marginLeft="30dp"
         android:layout_toRightOf="@+id/image"
         android:text="a country"
-        android:textColor="#595959"
+        android:textColor="@android:color/darker_gray"
         android:textSize="15sp" />
 
 
