--- a/app/src/main/res/layout/layout_listitem.xml
+++ b/app/src/main/res/layout/layout_listitem.xml
@@ -23,13 +23,13 @@
     <TextView
         android:id="@+id/image_name"
         android:layout_width="160dp"
-        android:layout_height="wrap_content"
+        android:layout_height="24dp"
         android:layout_alignParentTop="true"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:layout_toRightOf="@+id/image"
         android:text="Canada"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/darker_gray"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/image"
