--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#EC9797</color>
-    <color name="colorPrimaryDark">#E67272</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#ffcc99</color>
+    <color name="colorPrimaryDark">#ffbf80</color>
+    <color name="colorAccent">#ff8c1a</color>
     <color name="colorGrey">#252423</color>
 </resources>
