--- a/app/src/main/res/menu/example_menu.xml
+++ b/app/src/main/res/menu/example_menu.xml
@@ -2,16 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!--<item android:id="@+id/item1"-->
-        <!--android:icon="@drawable/ic_search_black_24dp"-->
-        <!--android:title="Search"-->
-        <!--app:showAsAction="ifRoom"/>-->
-
     <item android:id="@+id/item2"
         android:title="Popular"
         app:showAsAction="never"/>
 
     <item android:id="@+id/item3"
-        android:title="Favourite"
+        android:title="About Us"
         app:showAsAction="never"/>
 </menu>
