--- a/app/src/main/res/layout/layout_listitem.xml
+++ b/app/src/main/res/layout/layout_listitem.xml
@@ -29,7 +29,7 @@
         android:layout_marginTop="24dp"
         android:layout_toRightOf="@+id/image"
         android:text="Canada"
-        android:textColor="@android:color/darker_gray"
+        android:textColor="@android:color/background_dark"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/image"
@@ -43,7 +43,7 @@
         android:layout_marginStart="16dp"
         android:layout_toRightOf="@+id/image"
         android:text="a country"
-        android:textColor="@android:color/darker_gray"
+        android:textColor="@android:color/background_dark"
         android:textSize="15sp"
         app:layout_constraintStart_toEndOf="@+id/image"
         app:layout_constraintTop_toBottomOf="@+id/image_name" />
